# sox

./: Cargo.toml  Dockerfile  LICENSE  README.md
.cargo/: config.toml
benches/: variable_resolver_benchmark.rs
macros/: Cargo.toml
macros/src/: lib.rs  proc.rs
resources/: main.sox
src/: catalog.rs  core.rs  environment.rs  exceptions.rs  expr.rs  float.rs  init.rs  int.rs  interpreter.rs  lexer.rs  lib.rs  main.rs  parser.rs  resolver.rs  stmt.rs  string.rs  token.rs  token_type.rs
src/builtins/: bool.rs  bool_.rs  exceptions.rs  float.rs  function.rs  int.rs  method.rs  mod.rs  none.rs  string.rs  type.rs
tests/: compiler_tests.rs
tests/assignment/: associativity.sox  global.sox  infix_operator.sox  local.sox  prefix_operator.sox  syntax.sox  to_this.sox  undefined.sox
tests/block/: empty.sox  scope.sox
tests/call/: bool.sox  int.sox  none.sox  num.sox  object.sox  string.sox
tests/class/: empty.sox  inherit_self.sox  inherited_method.sox  local_inherit_other.sox  local_inherit_self.sox  reference_self.sox
tests/closure/: assign_to_closure.sox  close_over_function.sox  close_over_later_value.sox  close_over_method_parameter.sox  closed_closure_in_function.sox  nested_closure.sox  open_closure.sox  reference_closure_multiple_times.sox  reuse_closure_slot.sox  shadow_closure_with_local.sox  unused_closure.sox
tests/constructor/: argument.sox  call_init_early_return.sox  call_init_explicitly.sox  default.sox  default_arguments.sox  early_return.sox  init_not_method.sox  return_in_nested_function.sox
tests/expression/: evaluate.sox
(+67 files in other folders)
