workspace = { members = ["macros"] }
[package]
name = "sox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slotmap = "1.0.6"
log = "0.4.20"
env_logger = { version = "0.10.0", features = [] }
chrono = "0.4.38"
macros = {path="macros"}
once_cell = "1.18.0"
lazy_static = "1.5.0"
ordered-float = "4.3.0"
rand = "0.9.0-alpha.2"
polars = { version = "0.44.0" , features = ["lazy"]}

[dev-dependencies]
criterion = "0.5.1"
walkdir = "2.5.0"
regex = "1.9.5"
#polars = "0.43.1"